--- a/src/pages/BookDetails/BookDetails.module.scss
+++ b/src/pages/BookDetails/BookDetails.module.scss
@@ -1,7 +1,1 @@
-.gridContainer {
-  background-color: lightgrey;
-  padding-bottom: 40px;
-  padding-top:40px;
-  padding-left: 25px;
-  padding-right: 25px;
-}
+@import 'src/styles';
