--- a/src/pages/AuthorDetails/AuthorDetails.module.scss
+++ b/src/pages/AuthorDetails/AuthorDetails.module.scss
@@ -1,1 +1,11 @@
 @import 'src/styles.scss';
+
+.gridContainerAuthor {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.gridContainerAuthorBio {
+  padding-top: 10px;
+  @extend .gridContainerAuthor;
+}
