Added search bar and search page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,6 +14,10 @@
   border-radius: 15px;
 }
 
+.searchThumbnailIMG {
+  border-radius: 5px;
+}
+
 .paperStyle{
   border-radius: 15px;
   flexGrow: 1;
