--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,13 @@
   padding: 20px;
   alignContent: center;
 }
+
+.gridContainerAuthor {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.gridContainerAuthorBio {
+  padding-top: 10px;
+  @extend .gridContainerAuthor;
+}
